--- a/recipes-qt/automotive/neptune-ui/neptune_user.service
+++ b/recipes-qt/automotive/neptune-ui/neptune_user.service
@@ -3,10 +3,13 @@ Description=Neptune
 After=systemd-user-sessions.service
 
 [Service]
-ExecStart=/usr/bin/appman -r -c /opt/am/config.yaml -c am-config.yaml --dbus none Main.qml -platform eglfs
-Restart=on-failure
 WorkingDirectory=/opt/neptune
+Environment=XDG_RUNTIME_DIR=/run/user/0/xdg
 Environment=QT_IM_MODULE=qtvirtualkeyboard
+Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/0/dbus/user_bus_socket
+Environment=HOME=/home/root/
+ExecStart=/usr/bin/appman -r -c am-config.yaml --dbus session Main.qml -platform eglfs
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
